# adix

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: ab_bench.rs
src/: agent.rs  board.rs  eval.rs  geom.rs  lib.rs  moves.rs  notation.rs  perft.rs  piece.rs  zobrist.rs
src/az/: dirichlet.rs  encoding.rs  mcts.rs  mod.rs  net.rs  replay.rs  selfplay.rs  train.rs
tests/: initial.rs  moves_basic.rs  perft.rs  rules.rs  zobrist.rs
